2011-06-26  Matevz Tadel  <matevz.tadel@ijs.si>

	* Opcode/Opcode.h:
	Apparently, pragma GCC diagnostic push/pop only works on gcc-4.6
	and later.

2011-06-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* Opcode/Makefile:
	* Opcode/Opcode.h:
	Fix some compilation warnings with gcc-4.6.

2011-06-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SolarSystem.cxx:
	* Glasses/SolarSystem.h:
	Get rid of TVector3 and TVectorT from ODECrawler and friends.

2011-06-12  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SolarSystem.cxx:
	Use HPointD instead of TVector3 for calculations.
	In MakePlanetoid() set parent of new CosmicBall to this so that
	one can set the ball as camera base.

	* Glasses/CosmicBall.cxx:
	* Glasses/CosmicBall.h:
	* Rnr/GL/CosmicBall_GL_Rnr.cxx:
	* Rnr/GL/SolarSystem_GL_Rnr.cxx:
	Use HPointD as velocity, HPointF as history position.
	Remove inner class Point that was used before.

2011-03-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SolarSystem.cxx:
	* Glasses/SolarSystem.h:
	Add calculation / plotting of energy (kinetic, potential and
	total).

2011-03-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/SolarSystem.cxx:
	* Glasses/SolarSystem.h:
	Follow-up on changes in OdeCrawler.

2010-12-12  Matevz Tadel  <matevz.tadel@ijs.si>

	* Opcode/Ice/IceTypes.h:
	Remove unused typedefs, defines and unions.

2010-10-17  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TringuCam.cxx:
	Add includes missing after GledCore cleanup.

2010-09-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Tringula.cxx:
	* Rnr/GL/TringuRep_GL_Rnr.cxx:
	Use new Ray custom-buffer functions.

2010-09-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TriMesh.cxx:
	In MakeBox() do not generate triangle colors, use underlaying
	color of object using the mesh.

2010-09-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/TriMesh.cxx:
	In ImportGTSurf() do not automatically generate vertex and
	triangle normals.

2010-05-26  Matevz Tadel  <matevz.tadel@ijs.si>
